Cleanup variables to build a chroot

--- a/templates/x2gothinclient_settings.erb
+++ b/templates/x2gothinclient_settings.erb
@@ -25,7 +25,7 @@ TC_PRETTY_NAME="X2Go TCE"
 TC_VERSION=`cat /usr/share/x2go/versions/VERSION.x2gothinclientmanagement`
 
 # base path for X2Go thin client files
-TC_BASE="<%= @x2go_chroot %>"
+TC_BASE="<%= @x2go_tce_base %>"
 
 # path to X2Go thin client chroot
 TC_CHROOT="$TC_BASE/chroot"
