Fixed tce language/keyboard issue

--- a/templates/x2go_install_firmware.erb
+++ b/templates/x2go_install_firmware.erb
@@ -5,4 +5,4 @@ set -e # exit on error
 sudo /usr/sbin/x2gothinclient_shell "echo 'deb <%= @x2go_tce_mirror %>  <%= @x2go_tce_os %> contrib non-free' > /etc/apt/sources.list.d/<%= @x2go_tce_os %>_non-free.list"
 <% end %>
 sudo /usr/sbin/x2gothinclient_shell "apt-get update"
-sudo /usr/sbin/x2gothinclient_shell "apt-get install --yes firmware-linux firmware-linux-nonfree firmware-bnx2 firmware-bnx2x firmware-myricom firmware-netxen  firmware-qlogic  firmware-ralink firmware-realtek intel-microcode amd64-microcode"
+sudo /usr/sbin/x2gothinclient_shell "apt-get install --yes locales-all firmware-linux firmware-linux-nonfree firmware-bnx2 firmware-bnx2x firmware-myricom firmware-netxen  firmware-qlogic  firmware-ralink firmware-realtek intel-microcode amd64-microcode"
