--- a/templates/x2gothinclient_settings.erb
+++ b/templates/x2gothinclient_settings.erb
@@ -1,5 +1,5 @@
-# <%=  scope.function_hiera(['managed_note', '# xxxZZZ'])  %>
-# 
+# <%=  @managed_note  %>
+#
 # Copyright (C) 2010-2012 by X2Go project, http://wiki.x2go.org
 #       Oleksandr Shneyder <oleksandr.shneyder@obviously-nice.de>
 #       Moritz 'Morty' Struebe <Moritz.Struebe@informatik.uni-erlangen.de>
@@ -55,6 +55,7 @@ TC_X2GO_DEBURL="deb http://packages.x2go.org/debian $TC_DISTRO_CODENAME main heu
 #TC_HTTPS_PROXY="http://webcache.intern:3128"
 #TC_FTP_PROXY="http://webcache.intern:3128"
 <% if  scope.function_hiera(['apt::proxy_host', false]) %>
+# Proxy set  by hiera apt::proxy_host and apt::proxy_port
 TC_HTTP_PROXY=""
 <% else %>
 TC_HTTP_PROXY=""
